--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -325,7 +324,7 @@
     <footer class="footer">
       <div class="footer-container container">
         <!-- Адреса та контакти -->
-        <div class="adress-container">
+        <div class="address-container">
           <a href="./index.html" class="logo">Web<span class="studio-white">Studio</span></a>
           <address>
             <ul class="footer-address">
