--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -234,7 +233,7 @@
 <footer class="footer">
   <div class="footer-container container">
     <!-- Адреса та контакти -->
-    <div class="adress-container">
+    <div class="address-container">
       <a href="./index.html" class="logo">Web<span class="studio-white">Studio</span></a>
       <address>
         <ul class="footer-address">
